# robotics-school-site

./: .dockerignore  .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
config/: settings.py  settings_env.py  urls.py
core/: admin.py  context_processors.py  middleware.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_course.py  0003_remove_course_image_url_course_image.py  0004_course_video_url.py  0005_alter_course_content_alter_post_content.py  0006_alter_course_options_remove_course_age_range_and_more.py
core/templatetags/: video_tags.py
docker/: Dockerfile  docker-compose.yml
locale/ru/LC_MESSAGES/: django.po
static/css/: app.css  style.css
templates/: base.html  course_detail.html  courses_list.html  home.html  news_detail.html  news_list.html
